--- a/index.html
+++ b/index.html
@@ -112,9 +112,8 @@
       </div>
     </div>
 
-    <p>
-
-    </p>
+    <br>
+    <br>
     <!--carousel end-->
     <!--About us section-->
     <div class="accordion py-4" id="accordionExample">
@@ -176,9 +175,8 @@
       </div>
     </div>
     <!--END of About us section-->
-    <p>
-
-    </p>
+    <br>
+    <br>
     <!--MAP-->
     <section id="Location">
       <div class="container py-1">
@@ -190,12 +188,12 @@
               [1] <mark>Join Us!</mark>/Make an account with us
             </p>
             <br>
-            <p class="steps"style="color: white;">
+            <p class="steps" style="color: white;">
               [2] Using our website, <mark>reserve your bike</mark>
             </p>
             <br>
             <p class="steps" style="color: white;">
-              [3] <mark>Travel</mark> to your selected bike station 
+              [3] <mark>Travel</mark> to your selected bike station
             </p>
             <br>
             <p class="steps" style="color: white;">
@@ -220,6 +218,7 @@
     </section>
     <!--END OF MAP-->
     <br>
+    <br>
     <!--Become a member now!-->
     <div class="container-fluid">
       <div class="col-12 col-md-12 col-lg-12">
@@ -237,6 +236,7 @@
       </div>
     </div>
     <br>
+    <br>
     <!--end of become a member now!-->
     <!-- PRICING -->
     <div class="container py-1" id="Pricing">
@@ -249,10 +249,10 @@
           <h3 class="maptitle" style="color: rgb(238, 255, 204);"><u>PRICING</u></h3>
           <br>
           <p class="steps" style="color: white;">
-            <strong>£3.25</strong> Single Trip (One-way trip) 
+            <strong>£3.25</strong> Single Trip (One-way trip)
           </p>
           <br>
-          <p class="steps"style="color: white;">
+          <p class="steps" style="color: white;">
             <strong>£7.00</strong> Day Pass (24-hour access)
           </p>
           <br>
@@ -261,50 +261,102 @@
           </p>
           <br>
           <p class="steps" style="color: white;">
-           <strong><u>OVERAGE FEES:</u></strong> £4 FOR EVERY EXTRA 30 MINUTES!!
+            <strong><u>OVERAGE FEES:</u></strong> £4 FOR EVERY EXTRA 30 MINUTES!!
           </p>
           <br>
           <p class="link" style="color: white;">
-            Information and overage fee table can be found from <!--<u><url>https://bikesharetoronto.com/pricing/<url></u>-->
-           </p>
-           <a href="https://bikesharetoronto.com/pricing/" target="_blank">
-             <p class="link" style="color: white;">
-               <u>https://bikesharetoronto.com/pricing/</u>
-             </p>
-           </a>
+            Information and overage fee table can be found from
+            <!--<u><url>https://bikesharetoronto.com/pricing/<url></u>-->
+          </p>
+          <a href="https://bikesharetoronto.com/pricing/" target="_blank">
+            <p class="link" style="color: white;">
+              <u>https://bikesharetoronto.com/pricing/</u>
+            </p>
+          </a>
         </div>
       </div>
     </div>
+    <br>
     <br>
     <!-- END OF PRICING -->
     <!--reservation form-->
     <form>
       <div class="container-fluid" id="form">
         <div class="col-12 col-md-12 col-lg-12">
-      <div class="signup-form bg-dark">
-      <div class="signup-head bg-dark" style="color: white;">
-        <h6>Reserve Your Bike Here:</h6>
-      </div>
 
-      <div class="signup-content">
-        <input type="radio" class="radio" name="r">
-        <label class="text-white">Single Trip</label>
-        <input type="radio" class="radio" name="r">
-        <label class="text-white">Day Trip</label>
-        <input type="radio" class="radio" name="r">
-        <label class="text-white">3 Day Hire</label>
-      </div>
+          <div class="signup-head">
+            <h3 class="maptitle" style="color: rgb(238, 255, 204);"><u>Reserve Your Bike Here:</u></h3>
+          </div>
 
-      <div class="signup-content2">
-        <input type="text" placeholder="From" class="input bg-light">
-        <input type="text" placeholder="To" class="input bg-light">
-      </div>
+          <div class="signup-content">
+            <input type="radio" class="radio" name="r">
+            <label class="text-white">Single Trip</label>
+            <input type="radio" class="radio" name="r">
+            <label class="text-white">Day Trip</label>
+            <input type="radio" class="radio" name="r">
+            <label class="text-white">3 Day Hire</label>
+          </div>
 
-      <label class="text-white">Day of Hire</label>
-      <input type="date" class="doh">
-    </div>
+          <div class="signup-content2">
+            <input type="text" placeholder="First Name" class="input bg-light">
+            <input type="text" placeholder="Last Name" class="input bg-light">
+          </div>
+
+          <div class="signup-content2">
+            <label class="text-white">Day of Hire</label>
+            <input type="date" class="doh" style="margin-left:10px;">
+            <label class="text-white" style="margin-left:15px;">Day of Return</label>
+            <input type="date" class="doh" style="margin-left:10px;">
+          </div>
+
+          <div class="signup-content2">
+            <label class="text-white">Time of Hire</label>
+            <input type="time" class="toh" style="margin-left:10px;">
+            <label class="text-white" style="margin-left:25px;">Time of Return</label>
+            <input type="time" class="toh" style="margin-left:10px;">
+          </div>
+
+          <div class="signup-content2">
+            <input type="number" class="bg-light code" placeholder="Member Code">
+          </div>
+
+          <div class="signup-content2">
+            <label style="color: white;">Bike Pick Up</label>
+            <select style="margin-left:10px;">
+              <option>Station (Main) Hub</option>
+              <option>Market Place Station</option>
+              <option>King's Collage Station</option>
+              <option>Kettles Yard Station</option>
+              <option>The Grafton Station</option>
+            </select>
+
+          </div>
+          <div class="signup-content2">
+            <p style="color: white;"><strong><u>Payment:</u></strong></p>
+            <div class="signup-content">
+              <input type="radio" class="radio" name="r">
+              <label class="text-white">Visa</label>
+              <input type="radio" class="radio" name="r">
+              <label class="text-white">Mastercard</label>
+              <input type="radio" class="radio" name="r">
+              <label class="text-white">PayPal</label>
+            </div>
+            <input type="text" placeholder="Initials on Card" class="input bg-light">
+            <label class="text-white" style="margin-left:15px;">Expiry Date</label>
+            <input type="date" class="doh" style="margin-left:10px;">
+          </div>
+          <div class="signup-content2">
+            <input type="number" class="bg-light code" placeholder="Card Number" style="margin-left:10px;">
+          </div>
+          <div class="signup-content2">
+          <a href="#" class="btn btn-primary" style="margin-left:10px;">Complete my Reservation!</a>
+        </div>
+        </div>
+      </div>
     </form>
     <!--end of reservation form-->
+    <br>
+    <br>
     <!--member perks-->
     <div class="container-fluid" id="Member">
       <div class="col-12 col-md-12 col-lg-12">
@@ -312,31 +364,35 @@
 
           <div class="card-body">
             <h5 class="card-title"></h5>
-            <p class="card-text"><strong>30 MEMBERSHIP £99 
-              LESS THAN £10 A MONTH</strong>
+            <p class="card-text"><strong>30 MEMBERSHIP £99
+                LESS THAN £10 A MONTH</strong>
             </p>
             <p>
-              Join as an Annual 30 Member for only £99 per year. Enjoy multiple 30-minute, station-to-station trips all year round for less than £10 a month or as little as 30p a day
+              Join as an Annual 30 Member for only £99 per year. Enjoy multiple 30-minute, station-to-station trips all
+              year round for less than £10 a month or as little as 30p a day
+            </p>
+            <p>
+              <em>*The first 30 minutes of each ride are included in the membership. After 30 minutes extra usage fees
+                apply, see Overage Fees below.</em>
+            </p>
+            <br>
+            <p class="card-text"><strong>ANNUAL 45 MEMBERSHIP $115
+                MORE FLEXIBILITY, MORE RIDE TIME</strong>
+            </p>
+            <p>
+              Join as an Annual 45 Member for only $115 per year. Enjoy unlimited 45 minute, station-to-station trips
+              all year round.
+            </p>
+            <p>
+              <em>*The first 30 minutes of each ride are included in the membership. After 30 minutes extra usage fees
+                apply, see Overage Fees below.</em>
+            </p>
+            <a href="https://bikesharetoronto.com/pricing/" target="_blank">
+              <p class="link" style="color: rgb(0, 0, 0);">
+                <u>https://bikesharetoronto.com/pricing/</u>
               </p>
-              <p>
-              <em>*The first 30 minutes of each ride are included in the membership. After 30 minutes extra usage fees apply, see Overage Fees below.</em>
-                </p>
-                <br>
-                <p class="card-text"><strong>ANNUAL 45 MEMBERSHIP $115
-                  MORE FLEXIBILITY, MORE RIDE TIME</strong>
-                </p>
-                  <p>
-                  Join as an Annual 45 Member for only $115 per year. Enjoy unlimited 45 minute, station-to-station trips all year round.
-                  </p>
-                  <p>
-                  <em>*The first 30 minutes of each ride are included in the membership. After 30 minutes extra usage fees apply, see Overage Fees below.</em>
-                    </p>
-                    <a href="https://bikesharetoronto.com/pricing/" target="_blank">
-                      <p class="link" style="color: rgb(0, 0, 0);">
-                        <u>https://bikesharetoronto.com/pricing/</u>
-                      </p>
-                    </a>
-                    <br>
+            </a>
+            <br>
             <a href="#" class="btn btn-primary">JOIN NOW!</a>
           </div>
 
