about us update

--- a/index.html
+++ b/index.html
@@ -129,7 +129,11 @@
           <div class="accordion-body" style="color: rgb(39, 7, 96)">
             We are a tight-knit company, <strong>focused on furthering the improvement of the environment.</strong> The
             inclusion of a bike hire service throughout multiple different cities around the country, will minimise the
-            use of cars and therefore <strong> minimise the amount of pollution </strong>in the air. Our little business
+            use of cars and therefore <strong> minimise the amount of pollution </strong>in the air. “Bike-sharing schemes also encourage women to cycle. Generally only
+            25% of bicycle commuters in cities are female, but this rises to 42%
+            with bike share schemes. The report concludes: “A majority of
+            bike-share users report that they feel healthier, and a similar number
+            also report feeling happier.” - we aim to achieve this also. Our little business
             was first founded back in 2017, with minimal help and advertising we were able to reach this point and we
             hope you will <strong> join us for the rest of our journey!</strong>
           </div>
